Enable Multi AZ

--- a/cloudformation/rds.yaml
+++ b/cloudformation/rds.yaml
@@ -39,6 +39,7 @@ Resources:
       Engine: MySQL
       MasterUsername: !Sub ${MasterUsername}
       MasterUserPassword: !Sub ${MasterPassword}
+      MultiAZ: True
 
 Outputs:
   SubnetGroup:
