--- a/cloudformation/vpc.yaml
+++ b/cloudformation/vpc.yaml
@@ -1,3 +1,4 @@
+# File from https://github.com/udacity/nd063-c2-design-for-availability-resilience-reliability-replacement-project-starter-template/blob/master/cloudformation/vpc.yaml
 Description:  Udacity - Design for Availability, Resilience, and Reliability
 
 Parameters:
